Refonte totale : Passage à PPO avec Stable Baselines3 sur E1M1

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,10 @@
-# Environnement virtuel
+# .gitignore
 venv/
 __pycache__/
 *.pyc
-
-# Fichiers de logs et plots
-*.png
-
-# Modèles (Trop lourds pour GitHub classique, on ignore tout sauf peut-être un "best")
-models/*.pth
-!models/best_model.pth
-
-# Assets (VizDoom files)
-assets/*.wad
-# On garde les .cfg car ils sont légers et nécessaires à la config
+.idea/
+.vscode/
+logs/
+models/
+*.wad
+!assets/doom1.wad
